Simplify marketing pages and remove extra sections

--- a/index.html
+++ b/index.html
@@ -3,146 +3,96 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Perri7 - Fashion & Homegoods Licensing</title>
+    <title>Perri7 | Fashion Licensing for Growth</title>
     <link rel="stylesheet" href="style.css">
-</head>
+    </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">Perri7</div>
-            <ul class="nav-links">
-                <li><a href="index.html" class="active">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="brands.html">Brands</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="investors.html">Investors</a></li>
-            </ul>
-        </nav>
+        <div class="container nav-container">
+            <div class="logo">
+                <img src="images/perri7-logo.png" alt="Perri7 Apparel & Houseware">
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="brands.html">For Brands</a></li>
+                    <li><a href="investors.html">For Investors</a></li>
+                    <li><a href="contact.html" class="cta-button">Connect</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
         <section class="hero">
-            <div class="hero-content">
-                <h1>Transforming Brands into Lifestyle Experiences</h1>
-                <p class="hero-subtitle">Leading fashion and homegoods licensing partner for global brands</p>
-                <div class="cta-buttons">
-                    <a href="brands.html" class="btn btn-primary">Explore Our Brands</a>
-                    <a href="contact.html" class="btn btn-secondary">Partner With Us</a>
+            <div class="container">
+                <div class="hero-content">
+                    <h1>Unlock Your Brand's Potential in Fashion Licensing.</h1>
+                    <p>Perri7 is the strategic License Director connecting iconic brands with strategic manufacturing and retail opportunities in high-growth apparel and houseware markets.</p>
+                    <a href="brands.html" class="primary-cta">Partner Your Brand</a>
+                    <a href="investors.html" class="secondary-cta">Explore Investment</a>
                 </div>
             </div>
-        </section>
+            </section>
 
-        <section class="intro">
+        <section class="value-prop">
             <div class="container">
-                <h2>Welcome to Perri7</h2>
-                <p class="lead">We are a premier licensing company specializing in fashion apparel and homegoods. Our expertise lies in building strategic partnerships that bring iconic brands to life through innovative product lines and retail experiences.</p>
-            </div>
-        </section>
-
-        <section class="services">
-            <div class="container">
-                <h2>What We Do</h2>
-                <div class="services-grid">
-                    <div class="service-card">
-                        <h3>Fashion Licensing</h3>
-                        <p>From streetwear to luxury fashion, we develop comprehensive apparel collections that capture the essence of your brand and resonate with today's consumers.</p>
+                <h2>Our Value Proposition</h2>
+                <div class="prop-grid">
+                    <div>
+                        <h3>Strategic Vision</h3>
+                        <p>We craft data-driven licensing strategies tailored for market dominance and brand longevity.</p>
                     </div>
-                    <div class="service-card">
-                        <h3>Homegoods & Decor</h3>
-                        <p>We create compelling home product lines including textiles, decor, furniture, and lifestyle accessories that extend your brand into the home.</p>
+                    <div>
+                        <h3>Global Network</h3>
+                        <p>Access our trusted network of top-tier manufacturers, distributors, and retail partners.</p>
                     </div>
-                    <div class="service-card">
-                        <h3>Brand Strategy</h3>
-                        <p>Our team provides strategic guidance on market positioning, product development, and retail distribution to maximize your brand's licensing potential.</p>
-                    </div>
-                    <div class="service-card">
-                        <h3>Global Distribution</h3>
-                        <p>Leveraging our extensive retail network, we ensure your licensed products reach the right markets through the most effective channels.</p>
+                    <div>
+                        <h3>Focused Expertise</h3>
+                        <p>Specializing exclusively in the wholesale/retail apparel and houseware sectors.</p>
                     </div>
                 </div>
             </div>
         </section>
-
-        <section class="stats">
+        
+        <section class="callout brands-callout">
             <div class="container">
-                <div class="stats-grid">
-                    <div class="stat">
-                        <h3>25+</h3>
-                        <p>Brand Partners</p>
-                    </div>
-                    <div class="stat">
-                        <h3>15</h3>
-                        <p>Years Experience</p>
-                    </div>
-                    <div class="stat">
-                        <h3>40+</h3>
-                        <p>Countries</p>
-                    </div>
-                    <div class="stat">
-                        <h3>500M+</h3>
-                        <p>Annual Retail Sales</p>
-                    </div>
-                </div>
+                <h2>For Brands: Expand Your Reach</h2>
+                <p>Monetize your intellectual property and extend your brand presence into new product categories without the need for direct investment in manufacturing.</p>
+                <a href="brands.html" class="primary-cta">See Our Process &rarr;</a>
             </div>
         </section>
 
-        <section class="why-choose">
+        <section class="callout investors-callout">
             <div class="container">
-                <h2>Why Choose Perri7</h2>
-                <div class="features">
-                    <div class="feature">
-                        <h4>Proven Track Record</h4>
-                        <p>Over 15 years of successful brand partnerships across fashion and homegoods categories, with a portfolio of market-leading licensed products.</p>
-                    </div>
-                    <div class="feature">
-                        <h4>Industry Expertise</h4>
-                        <p>Our team combines deep knowledge of fashion trends, consumer behavior, and retail dynamics to create products that sell.</p>
-                    </div>
-                    <div class="feature">
-                        <h4>End-to-End Support</h4>
-                        <p>From concept to shelf, we manage every aspect of the licensing process including design, manufacturing, logistics, and retail placement.</p>
-                    </div>
-                    <div class="feature">
-                        <h4>Innovation Focus</h4>
-                        <p>We stay ahead of market trends, incorporating sustainable practices and cutting-edge design to keep your brand relevant and competitive.</p>
-                    </div>
-                </div>
-            </div>
-        </section>
-
-        <section class="cta-section">
-            <div class="container">
-                <h2>Ready to Elevate Your Brand?</h2>
-                <p>Let's discuss how licensing can unlock new revenue streams and expand your brand's reach.</p>
-                <a href="contact.html" class="btn btn-primary">Get in Touch</a>
+                <h2>For Investors: Stable Growth Opportunities</h2>
+                <p>Invest in the lucrative fashion licensing market. We identify and manage high-potential agreements, ensuring rigorous due diligence and maximizing returns.</p>
+                <a href="investors.html" class="primary-cta">View Opportunities &rarr;</a>
             </div>
         </section>
     </main>
 
     <footer>
-        <div class="container">
-            <div class="footer-content">
-                <div class="footer-section">
-                    <h3>Perri7</h3>
-                    <p>Leading fashion and homegoods licensing partner</p>
-                </div>
-                <div class="footer-section">
-                    <h4>Quick Links</h4>
-                    <ul>
-                        <li><a href="about.html">About Us</a></li>
-                        <li><a href="brands.html">Our Brands</a></li>
-                        <li><a href="contact.html">Contact</a></li>
-                        <li><a href="investors.html">Investors</a></li>
-                    </ul>
-                </div>
-                <div class="footer-section">
-                    <h4>Contact</h4>
-                    <p>Email: license@perri7.com</p>
-                    <p>Phone: +1 (555) 123-4567</p>
-                </div>
+        <div class="container footer-content">
+            <div class="contact-info">
+                <h4>Contact Perri7</h4>
+                <p>230 W 38th Street, 12th Fl.</p>
+                <p>New York, NY 10018</p>
+                <p>Phone: 917-960-0822</p>
+                <p>Email: <a href="mailto:license@perri7.com">license@perri7.com</a></p>
+                <p>Web: <a href="http://www.perri7.com">www.perri7.com</a></p>
             </div>
-            <div class="footer-bottom">
-                <p>&copy; 2025 Perri7. All rights reserved.</p>
+            <div class="footer-links">
+                <h4>Quick Links</h4>
+                <ul>
+                    <li><a href="about.html">Our Story</a></li>
+                    <li><a href="brands.html">Licensing</a></li>
+                    <li><a href="investors.html">Investment</a></li>
+                </ul>
+            </div>
+            <div class="social-links">
+                <p>&copy; 2025 Perri7 Apparel & Houseware</p>
             </div>
         </div>
     </footer>
