--- a/investors.html
+++ b/investors.html
@@ -36,30 +36,7 @@
 
         <section class="financial-highlights">
             <div class="container">
-                <h2>Financial Highlights</h2>
-                <div class="highlights-grid">
-                    <div class="highlight-card">
-                        <h3>$500M+</h3>
-                        <p>Annual Retail Sales</p>
-                        <span class="trend positive">+18% YoY</span>
-                    </div>
-                    <div class="highlight-card">
-                        <h3>$75M</h3>
-                        <p>Annual Revenue</p>
-                        <span class="trend positive">+22% YoY</span>
-                    </div>
-                    <div class="highlight-card">
-                        <h3>25+</h3>
-                        <p>Active Brand Licenses</p>
-                        <span class="trend positive">+5 New in 2024</span>
-                    </div>
-                    <div class="highlight-card">
-                        <h3>40+</h3>
-                        <p>Global Markets</p>
-                        <span class="trend positive">Expanding</span>
-                    </div>
-                </div>
-                <p class="data-note">*Fiscal year 2024 data</p>
+               
             </div>
         </section>
 
@@ -169,90 +146,12 @@
             </div>
         </section>
 
-        <section class="financial-reports">
-            <div class="container">
-                <h2>Financial Reports & Documents</h2>
-                <div class="documents-grid">
-                    <div class="document-card">
-                        <h4>Annual Reports</h4>
-                        <ul class="document-list">
-                            <li><a href="#">2024 Annual Report (PDF)</a></li>
-                            <li><a href="#">2023 Annual Report (PDF)</a></li>
-                            <li><a href="#">2022 Annual Report (PDF)</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="document-card">
-                        <h4>Quarterly Results</h4>
-                        <ul class="document-list">
-                            <li><a href="#">Q4 2024 Earnings (PDF)</a></li>
-                            <li><a href="#">Q3 2024 Earnings (PDF)</a></li>
-                            <li><a href="#">Q2 2024 Earnings (PDF)</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="document-card">
-                        <h4>Presentations</h4>
-                        <ul class="document-list">
-                            <li><a href="#">Investor Presentation 2024 (PDF)</a></li>
-                            <li><a href="#">Strategy Overview (PDF)</a></li>
-                            <li><a href="#">ESG Report 2024 (PDF)</a></li>
-                        </ul>
-                    </div>
-
-                    <div class="document-card">
-                        <h4>Corporate Governance</h4>
-                        <ul class="document-list">
-                            <li><a href="#">Code of Conduct (PDF)</a></li>
-                            <li><a href="#">Board Charter (PDF)</a></li>
-                            <li><a href="#">Committee Charters (PDF)</a></li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-        </section>
 
         <section class="news-events">
             <div class="container">
                 <h2>News & Events</h2>
                 <div class="news-grid">
-                    <div class="news-item">
-                        <span class="news-date">March 15, 2025</span>
-                        <h4>Perri7 Announces Partnership with Global Fashion Brand</h4>
-                        <p>New multi-year licensing agreement expected to generate $50M in retail sales annually.</p>
-                    </div>
-
-                    <div class="news-item">
-                        <span class="news-date">February 28, 2025</span>
-                        <h4>Q4 2024 Earnings Call Scheduled</h4>
-                        <p>Company to report fourth quarter and full year 2024 results on March 5, 2025 at 8:00 AM EST.</p>
-                    </div>
-
-                    <div class="news-item">
-                        <span class="news-date">January 20, 2025</span>
-                        <h4>Perri7 Expands Asian Market Presence</h4>
-                        <p>New office in Shanghai to support growing licensing portfolio in China and Southeast Asia.</p>
-                    </div>
-
-                    <div class="news-item">
-                        <span class="news-date">December 10, 2024</span>
-                        <h4>Sustainability Initiative Launched</h4>
-                        <p>Company commits to 50% sustainable materials across all licensed products by 2027.</p>
-                    </div>
-                </div>
-
-                <div class="events-calendar">
-                    <h3>Upcoming Events</h3>
-                    <div class="event-item">
-                        <span class="event-date">April 10, 2025</span>
-                        <h4>Q1 2025 Earnings Call</h4>
-                        <p>Conference call to discuss first quarter 2025 financial results</p>
-                    </div>
-                    <div class="event-item">
-                        <span class="event-date">May 15-17, 2025</span>
-                        <h4>Licensing Expo 2025</h4>
-                        <p>Las Vegas Convention Center - Visit us at Booth #1234</p>
-                    </div>
+                     </div>
                 </div>
             </div>
         </section>
@@ -309,13 +208,13 @@
                         </div>
                         <div class="contact-item">
                             <h4>Phone</h4>
-                            <p>+1 (555) 123-4571</p>
+                            <p>+1 917-960-0822</p>
                         </div>
                         <div class="contact-item">
                             <h4>Mailing Address</h4>
                             <p>Perri7 Investor Relations<br>
                             230 W 38th Street<br>
-                            12th Floor<br>
+                            12th Floor
                             New York, NY 10018</p>
                         </div>
                     </div>
@@ -358,7 +257,7 @@
                 </div>
                 <div class="footer-section">
                     <h4>Contact</h4>
-                    <p>Email: license@perri7.com</p>
+                    <p>Email: info@perri7.com</p>
                     <p>Phone: +1 (555) 123-4567</p>
                 </div>
             </div>
