Wire images into layout

--- a/about.html
+++ b/about.html
@@ -37,7 +37,7 @@
                         <p>Today, we work with some of the world's most recognized brands, helping them expand into new categories and markets through strategic licensing partnerships. Our success is built on trust, creativity, and an unwavering commitment to excellence.</p>
                     </div>
                     <div class="about-image">
-                        <div class="placeholder-image">Our Story</div>
+                        <img src="Images/Cool swirl.jpeg" alt="Creative swirl artwork representing the Perri7 story" class="about-photo">
                     </div>
                 </div>
             </div>
