--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container nav-container">
             <div class="logo">
-                <img src="images/perri7-logo.png" alt="Perri7 Apparel & Houseware">
+                <img src="Images/perri7-logo.png" alt="Perri7 Apparel & Houseware">
             </div>
             <nav>
                 <ul>
