--- a/about.html
+++ b/about.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">Perri7</div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html" class="active">About</a></li>
-                <li><a href="brands.html">Brands</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="investors.html">Investors</a></li>
-            </ul>
-        </nav>
+        <div class="container nav-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="Images/perri7-logo.png" alt="Perri7">
+                </a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html" class="active">About Us</a></li>
+                    <li><a href="brands.html">For Brands</a></li>
+                    <li><a href="investors.html">For Investors</a></li>
+                    <li><a href="contact.html" class="cta-button">Connect</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
@@ -33,8 +39,7 @@
                 <div class="about-content">
                     <div class="about-text">
                         <h2>Our Story</h2>
-                        <p>Founded in 2010, Perri7 has grown from a boutique licensing agency to a leading force in fashion and homegoods brand licensing. Our journey began with a simple belief: great brands deserve great partners who understand their vision and can translate it into products that consumers love.</p>
-                        <p>Today, we work with some of the world's most recognized brands, helping them expand into new categories and markets through strategic licensing partnerships. Our success is built on trust, creativity, and an unwavering commitment to excellence.</p>
+                        <p>Founded in 2025, Perri7 has grown from a boutique licensing agency to a leading force in fashion and homegoods brand licensing. Our journey began with a simple belief: great brands deserve great partners who understand their vision and can translate it into products that consumers love.</p>
                     </div>
                     <div class="about-image">
                         <img src="Images/Cool swirl.jpeg" alt="Creative swirl artwork representing the Perri7 story" class="about-photo">
