--- a/brands.html
+++ b/brands.html
@@ -8,16 +8,22 @@
 </head>
 <body>
     <header>
-        <nav>
-            <div class="logo">Perri7</div>
-            <ul class="nav-links">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="about.html">About</a></li>
-                <li><a href="brands.html" class="active">Brands</a></li>
-                <li><a href="contact.html">Contact</a></li>
-                <li><a href="investors.html">Investors</a></li>
-            </ul>
-        </nav>
+        <div class="container nav-container">
+            <div class="logo">
+                <a href="index.html">
+                    <img src="Images/perri7-logo.png" alt="Perri7">
+                </a>
+            </div>
+            <nav>
+                <ul>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="about.html">About Us</a></li>
+                    <li><a href="brands.html" class="active">For Brands</a></li>
+                    <li><a href="investors.html">For Investors</a></li>
+                    <li><a href="contact.html" class="cta-button">Connect</a></li>
+                </ul>
+            </nav>
+        </div>
     </header>
 
     <main>
